--- a/SPV1/src/Vista/MenuPrincipal.form
+++ b/SPV1/src/Vista/MenuPrincipal.form
@@ -196,7 +196,7 @@
                       <Component id="btnHistorialventa" alignment="3" min="-2" pref="169" max="-2" attributes="0"/>
                       <Component id="btnNuevaVenta" alignment="3" min="-2" pref="164" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="183" max="32767" attributes="0"/>
+                  <EmptySpace pref="174" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -234,10 +234,20 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="btnLiquidacionIndividual" min="-2" pref="167" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="btnLiquidacionGrupal" min="-2" pref="167" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -246,6 +256,11 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="btnLiquidacionIndividual" alignment="3" min="-2" pref="169" max="-2" attributes="0"/>
+                      <Component id="btnLiquidacionGrupal" alignment="3" min="-2" pref="169" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -256,6 +271,22 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Liquidacion"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnLiquidacionIndividual">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Individual"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLiquidacionIndividualActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnLiquidacionGrupal">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Grupal"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLiquidacionGrupalActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
